<resources>
    <string name="app_name">Metapp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_screeninvader">Screeninvader</string>
    <string name="title_control">Control</string>
    <string name="title_issues">Issues</string>
    <string name="title_settings">Settings</string>

    <string name="title_subheader_social">Social Things</string>

    <string name="title_github">Github</string>
    <string name="title_share">Share</string>

    <string name="confirm_clear_playlist">Clear Playlist?</string>
    <string name="button_label_confirm_clear_playlist">Clear</string>
    
    <string name="button_label_try_agein">Try Again</string>

    <string name="no_wifi_toast">Not Connected</string>



</resources>
